# time-tracker

./: App.jsx  Cargo.toml  LICENSE  README.md  apiService.ts  auth.rs  main.rs  project.rs  time_tracking.rs
public/: index.html  style.css
